--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qr-frontend",
+  "name": "qr-other",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:QR_frontend": "node dist/qr-frontend/server/server.mjs"
+    "serve:ssr:Qr_other": "node dist/qr-other/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -31,7 +31,6 @@
     "@angular-devkit/build-angular": "^17.1.2",
     "@angular/cli": "^17.1.2",
     "@angular/compiler-cli": "^17.1.0",
-    "@ionic/angular-toolkit": "latest",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
